fix: update file paths for GitHub Pages compatibility

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="./pages/index.css">
+  <link rel="stylesheet" href="pages/index.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="html, css">
   <meta name="author" content="Исмоил Гиёсидинов">
@@ -16,7 +16,7 @@
         <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в совей жизни?
         <a href="#" class="header__link" lang="ru">Узнать &rarr;</a>
         </p>
-        <img class="header__main-illustration" src="./images/two_again.png" alt="Опять двойка">
+        <img class="header__main-illustration" src="images/two_again.png" alt="Опять двойка">
         <div class="header__square-pic"></div>
     </header>
     <main class="content">
@@ -37,27 +37,27 @@
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <div class="cards">
           <div class="cards__item">
-            <img class="cards__image" src="./images/images_sprint-2/attention.png" alt="книга в руках">
+            <img class="cards__image" src="images/images_sprint-2/attention.png" alt="книга в руках">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="./images/images_sprint-2/recall.png" alt="скульптура мальчика">
+            <img class="cards__image" src="images/images_sprint-2/recall.png" alt="скульптура мальчика">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное - это позволит соединить разрозненные порции памяти.</p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="./images/images_sprint-2/interliving.png" alt="многолюдный холл">
+            <img class="cards__image" src="images/images_sprint-2/interliving.png" alt="многолюдный холл">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="./images/images_sprint-2/question.png" alt="комната с множеством дверей">
+            <img class="cards__image" src="images/images_sprint-2/question.png" alt="комната с множеством дверей">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушай преподавателя, придумывай хороший вопрос, который вас действительно волнует.</p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="./images/images_sprint-2/competence.png" alt="стопка книг">
+            <img class="cards__image" src="images/images_sprint-2/competence.png" alt="стопка книг">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </div>          
@@ -86,7 +86,7 @@
         <h2 class="feinman__title">Метод Фейнмана</h2>
         <p class="feinman__subtitle">Выучить и не забыть.</p>
         <a href="#" class="feinman__link" lang="ru">Подробнее &rarr;</a>
-        <img class="feinman__image" src="./images/feinman.png" alt="feinman">
+        <img class="feinman__image" src="images/feinman.png" alt="feinman">
       </section>
 
       <section class="digits">
@@ -138,7 +138,7 @@
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img class="khan__book-pic" src="./images/images_sprint-2/book.jpg" alt="книга Весь мир - школа">
+            <img class="khan__book-pic" src="images/images_sprint-2/book.jpg" alt="книга Весь мир - школа">
             <a href="#" class="khan__buy-link" lang="ru">Купить книгу &rarr;</a>
           </div>
         </div>
@@ -188,7 +188,7 @@
             <h3 class="table__heading">10</h3>
             <p class="table__text">Уделяйте внимание количеству и скорости.</p>
           </div>
-          <img class="kaufman__triangle" src="./images/triangle.svg" alt="triangle">
+          <img class="kaufman__triangle" src="images/triangle.svg" alt="triangle">
         </div>
       </section>       
        
@@ -196,10 +196,10 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <ul class="resources__logo-zone">
-          <li><a href="#" lang="ru"><img class="resources__logo" src="./images/images_sprint-2/logo/arzamas.svg" alt="лого Арзамас"></a></li>
-          <li><a href="#" lang="ru"><img class="resources__logo" src="./images/images_sprint-2/logo/n1.svg" alt="лого Н+1"></a></li>
-          <li><a href="#" lang="ru"><img class="resources__logo" src="./images/images_sprint-2/logo/strelka.svg" alt="лого Стрелка"></a></li>
-          <li><a href="#" lang="ru"><img class="resources__logo" src="./images/images_sprint-2/logo/polka.svg" alt="лого Полка"></a></li>
+          <li><a href="#" lang="ru"><img class="resources__logo" src="images/images_sprint-2/logo/arzamas.svg" alt="лого Арзамас"></a></li>
+          <li><a href="#" lang="ru"><img class="resources__logo" src="images/images_sprint-2/logo/n1.svg" alt="лого Н+1"></a></li>
+          <li><a href="#" lang="ru"><img class="resources__logo" src="images/images_sprint-2/logo/strelka.svg" alt="лого Стрелка"></a></li>
+          <li><a href="#" lang="ru"><img class="resources__logo" src="images/images_sprint-2/logo/polka.svg" alt="лого Полка"></a></li>
         </ul>
       </section>
 
@@ -221,9 +221,9 @@
         <nav class="footer__column footer__column_content_social">
           <h2 class="footer__column-heading">Соцсети</h2>
           <ul class="footer__column-links">
-            <li class="footer__column-link"><a class="footer__list-item" href="#" lang="ru"><img class="footer__social-icon" src="./images/facebook_white.svg" alt="">Facebook</a></li>
-            <li class="footer__column-link"><a class="footer__list-item" href="#" lang="ru"><img class="footer__social-icon" src="./images/vk_white.svg" alt="">ВКонтакте</a></li>
-            <li class="footer__column-link"><a class="footer__list-item" href="#" lang="ru"><img class="footer__social-icon" src="./images/instagram_white.svg" alt="">Instagram</a></li>
+            <li class="footer__column-link"><a class="footer__list-item" href="#" lang="ru"><img class="footer__social-icon" src="images/facebook_white.svg" alt="">Facebook</a></li>
+            <li class="footer__column-link"><a class="footer__list-item" href="#" lang="ru"><img class="footer__social-icon" src="images/vk_white.svg" alt="">ВКонтакте</a></li>
+            <li class="footer__column-link"><a class="footer__list-item" href="#" lang="ru"><img class="footer__social-icon" src="images/instagram_white.svg" alt="">Instagram</a></li>
           </ul>  
         </nav>
       </div>      
